# Decentralized-Autonomous-Swarm-Robot-for-Warehouse-Material-Handling

./: .gitignore  .pylintrc  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Gripper_Base.stl  Gripper_Clamp.stl  Gripper_LGear.stl  Gripper_RGear.stl  Gripper_Strut.stl  Gripper_SupportStrut.stl  LICENSE  PROJECT_STATUS.md  PROVENANCE.md  README.md  ROADMAP.md  SECURITY.md  gripper_v3.ipt  platformio.ini  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
assets/: ASSETS_README.md
cad/: CAD_README.md
communication/: README.md
communication/gateway/: gateway.py
communication/protocol/: messages.py  robot_id.py
datasets/: README.md
docs/: PERFORMANCE.md
docs/api/: API_REFERENCE.md
docs/architecture/: SystemArchitecture.md
docs/guides/: BUILD_COMMANDS.md  HARDWARE_ELECTRICAL.md  INSTALLATION.md  PID_TUNING.md  QUICKSTART.md  SENSOR_CALIBRATION.md  TROUBLESHOOTING.md
examples/: README.md  example_basic_control.py
firmware/: README.md
firmware/include/: config.h  line_follower.h  motor_controller.h  pid_controller.h  ultrasonic.h
firmware/src/: main.cpp
firmware/src/communication/: esp_now_client.c
firmware/src/motor_controller/: motor_controller.cpp
firmware/src/pid_controller/: pid_controller.cpp
hardware/: README.md
scripts/: migrate_assets.py
simulation/: README.md
testing/: README.md
testing/integration/: test_communication.py
testing/system/: test_integration.py
testing/unit/: test_pid_controller.py  test_vision.py
vision/: README.md
vision/src/: __init__.py  aruco_detector.py  camera.py  digital_twin.py  homography.py  pose_estimator.py  utils.py  warehouse_map.py
