[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-warehouse-robot"
version = "0.1.0"
description = "Decentralized Autonomous Swarm Robot for Warehouse Material Handling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Robotics Team", email = "team@example.com"}
]
keywords = ["robotics", "autonomous", "warehouse", "swarm", "ESP32"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Robotics",
    "Topic :: Software Development :: Embedded Systems",
]
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scipy>=1.13.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
vision = [
    "opencv-contrib-python>=4.8.0",
    "scikit-image>=0.22.0",
]
dashboard = [
    "PyQt5>=5.15.0",
    "pyqtgraph>=0.12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
]

[project.urls]
Homepage = "https://github.com/example/swarm-warehouse-robot"
Documentation = "https://swarm-warehouse-robot.readthedocs.io"
Repository = "https://github.com/example/swarm-warehouse-robot.git"
"Bug Tracker" = "https://github.com/example/swarm-warehouse-robot/issues"
